Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9584

filter in options page is surprisingly slow

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.1.0-beta
    • Qt Creator 2.8.0-beta
    • All Other Issues
    • None
    • Windows 7, Qt
    • 9b9d339c101e9fadc12da4d2b2372daa8817ebac

      How to reproduce:

      • open Tools/Options
      • enter a character into the search filter
      • wait...wait...wait

      Expected result:

      • instant feedback, or at least no application freeze

      On my Linux machine the search takes 8 seconds. On my (much more powerful) Windows machine the search takes 15, yes fifteen, seconds.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes